ToasitfyJS added, background image for body added

--- a/src/index.html
+++ b/src/index.html
@@ -8,15 +8,17 @@
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <meta name="description" content="All goblins, rektguys, degens and other rabble — welcome to the Rekt Garage A!" />
   <meta name="viewport"
-    content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no">
+    content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;700&family=Titan+One&display=swap"
-    rel="stylesheet">
+    rel="stylesheet" />
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 
   <link rel="stylesheet" href="app.scss" />
-  <script type="module" src="app.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script type="text/javascript" src="app.js" defer></script>
 </head>
 
 <body>
