Social icons upgrade

--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,11 @@
       <div class="relative">
         <div class="flex gap-6 absolute -bottom-8 left-0 w-full justify-center lg:justify-start">
           <a href="#" target="_blank" class="hover:bg-slate-100 rounded-full group">
-            <img src="./img/opensea.svg" class="w-16 h-16 rounded-full group-hover:opacity-80 object-cover"
+            <img src="./img/opensea.png" class="w-16 h-16 rounded-full group-hover:opacity-80 object-cover"
               alt="OpenSea" />
           </a>
           <a href="https://twitter.com/RektGarage" target="_blank" class="hover:bg-slate-100 rounded-full group">
-            <img src="./img/twitter.svg" class="w-16 h-16 rounded-full group-hover:opacity-80 object-cover"
+            <img src="./img/twitter.png" class="w-16 h-16 rounded-full group-hover:opacity-80 object-cover"
               alt="Twitter" />
           </a>
         </div>
